Fixed the possibility of deadlock on the repeating dataset

--- a/basic_cnn.ipynb
+++ b/basic_cnn.ipynb
@@ -322,15 +322,16 @@
     "def process_dataset(model, dataset, length, validate_dataset, vlength):\n",
     "    steps_per_epoch = math.ceil(length / batch_size)\n",
     "    dataset = dataset.batch(batch_size)\n",
-    "    dataset = dataset.repeat()  # Repeat the dataset for multiple epochs\n",
+    "    dataset = dataset.repeat(epochs)  # Repeat the dataset for multiple epochs\n",
+    "    dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
     "    validation_steps = math.ceil(vlength / batch_size)\n",
     "    validate_dataset = validate_dataset.batch(batch_size)\n",
+    "    validate_dataset = validate_dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
     "\n",
     "    #time the epochs to see how long it takes to train\n",
     "    start_time = tf.timestamp()  # Start time for timing the training\n",
     "    model.fit(dataset,\n",
     "              batch_size=batch_size,\n",
-    "              epochs=epochs,\n",
     "              steps_per_epoch=steps_per_epoch,\n",
     "              validation_data=validate_dataset,\n",
     "              validation_steps=validation_steps)\n",
